--- a/ucore/src/kern-ucore/fs/Makefile
+++ b/ucore/src/kern-ucore/fs/Makefile
@@ -1,4 +1,4 @@
-dirs-y := devs devfs pipe vfs swap
+dirs-y := devs devfs pipe vfs swap lwext4/src
 obj-y :=  kernel_file_pool.o file_desc_table.o file.o fs.o iobuf.o sysfile.o
 
 dirs-$(UCONFIG_HAVE_SFS) += sfs
